<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            style="@style/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_description" />

        <Button
            android:id="@+id/auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Authentication" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            style="@style/tvDescription"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_description" />

        <Button
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            style="@style/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_description" />

        <Button
            android:id="@+id/filestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filestore" />

        <TextView
            style="@style/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/websocket_description" />

        <Button
            android:id="@+id/websocket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Websocket" />

    </LinearLayout>
</ScrollView>